fixed profile menu not visible in corporation mode, one menu group in corp mode

--- a/src/application-frame/menu/CorporateMenu.scss
+++ b/src/application-frame/menu/CorporateMenu.scss
@@ -32,7 +32,7 @@
 
     .profile-menu {
         display: flex;
-        overflow: hidden;
+        //overflow: hidden;
     }
 }
 
@@ -104,7 +104,7 @@
             overflow-y: auto;
             overflow-x: hidden;
             height: inherit;
-    
+            display: block;
             >.p-menuitem {
                 float: left;
                 position: unset;
